# DijstraHomework

./: CMakeLists.txt  README.md
data/: graph0.txt  graph4.txt
src/: Graph.cpp  Graph.h  main.cpp  util.cpp  util.h
